--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,12 @@
 name: PlayerPoints
 version: '@version@'
-authors: [Esophose, Black_ixx]
+authors: [Esophose, Black_ixx, Dominiiikk_]
 website: 'https://www.spigotmc.org/resources/playerpoints.80745/'
 description: A point based currency system
 main: org.black_ixx.playerpoints.PlayerPoints
 api-version: '1.13'
 load: STARTUP
-softdepend: [Vault, Treasury, Votifier, PlaceholderAPI, TokenManager, GamePoints, NexEngine]
+softdepend: [Vault, Treasury, Votifier, PlaceholderAPI, TokenManager, GamePoints, SuperCredits, NexEngine]
 loadbefore: [mcMMO]
 folia-supported: true
 libraries:
